# logr

./: .gitmodules  CMakeLists.txt  README.md
examples/: builder.cpp  global.cpp  simple.cpp
include/log/: log.hpp
include/logr/: default.hpp  logger.hpp  logr.hpp  record.hpp
src/: default.cpp  logger.cpp  logr.cpp  record.cpp  util.hpp
